# boka

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .polkacodes.yml  .swiftformat  .swiftlint.yml  Cargo.toml  Dockerfile  Makefile  README.md  dev.Dockerfile  test_execution.swift
.githooks/: pre-commit
Blockchain/: Package.resolved  Package.swift
Boka/: Package.resolved  Package.swift
Cli/: Package.swift
Codec/: Package.resolved  Package.swift
Database/: Package.resolved  Package.swift
Fuzzing/: Package.swift
JAMTests/: Package.resolved  Package.swift
Networking/: Package.resolved  Package.swift
Node/: Package.resolved  Package.swift
PVMShell/: Package.resolved  Package.swift
PolkaVM/: .polkacodes.yml  Package.resolved  Package.swift  asmjit  default.profraw
RPC/: Package.resolved  Package.swift
Tools/: Package.swift
TracingUtils/: Package.resolved  Package.swift
Utils/: Package.resolved  Package.swift
Utils/Sources/bandersnatch/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
Utils/Sources/bandersnatch/src/: bandersnatch_vrfs.rs  ffi.rs
Utils/Sources/bls/: Cargo.toml  bindings.h  cbindgen.toml
Utils/Sources/bls/src/: bls.rs  ffi.rs  lib.rs
Utils/Sources/erasure-coding/: Cargo.toml  bindings.h  cbindgen.toml
Utils/Sources/erasure-coding/src/: ffi.rs  lib.rs
boka.xcodeproj/: project.pbxproj
plans/: PROGRESS_REPORT.md  pvm-recompiler-implementation.md
scripts/: bandersnatch.sh  blst.sh  build-and-test.sh  build-external-libs.sh  build-rust-libs.sh  deps.sh  dev.Dockerfile  devnet.sh  (+7 more)
(+1589 files in other folders)
