[package]
name = "bandersnatch-vrfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
ark-vrf = { git = "https://github.com/davxy/ark-vrf", tag = "v0.1.0", features = [
	"bandersnatch",
	"ring",
	"parallel",
] }


[dev-dependencies]
hex-literal = "0.4.1"
